--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img id="slide" src="imagem1.jpg" alt="Imagem" class="slide">
         </div>
         <div class="keywords">
-            <p>Atendimento 24 horas | Consultas | Cirurgias | Vacinação | Internação | Banho e Tosa</p>
+            <p>Atendimento 24 horas | Consultas | Cirurgias | Vacinação | Internação | Banho e Tosa | Atendimento a Domicílio</p>
         </div>
         <button onclick="agendar()">Agende agora</button>
     </div>
