--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <div class="container">
         <div class="image-container">
-            <img id="slide" src="imagem1.jpg" alt="Imagem" class="slide">
+            <img id="slide" src="assets/image-1.jpeg" alt="Imagem" class="slide">
         </div>
         <div class="keywords">
             <p>Atendimento 24 horas | Consultas | Cirurgias | Vacinação | Internação | Banho e Tosa | Atendimento a Domicílio</p>
