--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veterinária Rio das Ostras</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <header>
@@ -24,6 +24,6 @@
         <p>Telefone: (22) 1234-5678</p>
         <p>Redes sociais: <a href="#">Facebook</a> | <a href="#">Instagram</a></p>
     </footer>
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
