--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veterinária Rio das Ostras</title>
+    <title>Dra. Renata Ricciardi - Veterinária Rio das Ostras</title>
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <header>
-        <h1>Veterinária Rio das Ostras</h1>
+        <h1>Dra. Renata Ricciardi</h1>
+        <h2><b>Veterinária em Rio das Ostras</b></h2>
     </header>
     <div class="container">
         <div class="image-container">
             <img id="slide" src="https://veterinaria-rio-das-ostras.github.io/assets/image-1.jpeg" alt="Imagem" class="slide">
         </div>
+        <button class="agendar" onclick="agendar()">AGENDAR</button>
         <div class="keywords">
-            <p>Atendimento 24 horas | Consultas | Cirurgias | Vacinação | Internação | Banho e Tosa | Atendimento a Domicílio</p>
+            <p>Atendimento à domicilio</p>
+            <p>Vacinas</p>
+            <p>Acupunctura </p>
+            <p>Castração </p>
+            <p>Internações</p>
         </div>
-        <button onclick="agendar()">Agende agora</button>
     </div>
     <footer>
-        <p>Endereço: Rua Exemplo, 123 - Rio das Ostras, RJ</p>
-        <p>Telefone: (22) 1234-5678</p>
-        <p>Redes sociais: <a href="#">Facebook</a> | <a href="#">Instagram</a></p>
+        <div class="footer-content">
+            <p>Endereço: Rua Exemplo, 123 - Rio das Ostras, RJ</p>
+            <p>Telefone: (22) 9997-1260</p>
+            <a href="https://www.instagram.com" class="instagram-link">
+                <img src="https://veterinaria-rio-das-ostras.github.io/assets/instagram.png" alt="Instagram">
+                <span>@exemplo</span>
+            </a>
+        </div>
     </footer>
     <script src="assets/script.js"></script>
 </body>
