--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
         <div class="image-container">
             <img id="slide" src="https://veterinaria-rio-das-ostras.github.io/assets/image-1.jpeg" alt="Imagem" class="slide">
         </div>
-        <button class="agendar" onclick="agendar()">AGENDAR</button>
         <div class="keywords">
-            <p>Atendimento à domicilio</p>
-            <p>Vacinas</p>
-            <p>Acupunctura </p>
-            <p>Castração </p>
-            <p>Internações</p>
+            Atendimento à domicilio | Vacinas | Acupunctura  | Castração  | Internações
         </div>
+        <button class="agendar" onclick="agendar()">AGENDAR</button>
     </div>
     <footer>
         <div class="footer-content">
